# Evosim

./: CMakeLists.txt  README.md  ToDO.md  compile_commands.json  evosim
include/: GLfunksjoner.h  matte.h  organisme.h  settings.h  shaderclass.h  test.h
include/glad/: glad.h
src/: GLfunksjoner.cpp  glad.c  main.cpp  matte.cpp  organisme.cpp
src/shaders/: organismeShader.frag  organismeShader.vert
